# Misc-Programming

./: .gitignore  CMakeLists.txt  Competitive Programming Template (Big).cpp  Competitive Programming Template (Small).cpp  Disjoint Set Union (Union Find).cpp  Graph1.cpp  Matrix2d.cpp  README.md  String Data Structures.cpp  Tree1.cpp  Trie.cpp  uBigInt.cpp
learning/: itmo_two_ptr_step1_A_MergingArrays.cpp  itmo_two_ptr_step1_B_NumberOfSmaller.cpp  itmo_two_ptr_step1_C_NumberOfEqual.cpp  itmo_two_ptr_step2_A_Segment with Small Sum.cpp  itmo_two_ptr_step2_B_Segment with Big Sum.cpp  itmo_two_ptr_step2_C_Number of Segments with Small Sum.cpp  itmo_two_ptr_step2_D_Number of Segments with Big Sum.cpp  itmo_two_ptr_step2_E_Segments with Small Set.cpp  itmo_two_ptr_step2_F_Segments with Small Spread (Min Max StackAndQueue).cpp  itmo_two_ptr_step2_G_Coprime Segment.cpp
src/: Binary Index Tree (Fenwick Tree).cpp  Circular Queue.cpp  Competitive Programming Template (Big).cpp  Competitive Programming Template (Small).cpp  Disjoint Set Union (Union Find).cpp  Graph1.cpp  Matrix2d.cpp  MinMaxGcd_Operation_Stack_and_Queue.cpp  MyDebugger.hpp  MyLogger.hpp  MyVector.c  Number Theory.cpp  Policy Data Structures and Hashing.cpp  Prime Numbers.cpp  Quick Sort.cpp  Range Iteration.cpp  Segment Trees.cpp  String Data Structures.cpp  String View.cpp  Tree1.cpp  mylog.hpp  uBigInt.cpp
src_others/: 010_notes_Comparison-of-Recursive-and-Iterative-Implementations.md  lc_parentheses1.cpp  lc_parentheses2.cpp  sp1.cpp  sp2.cpp  sp3.cpp  sp4.cpp  sp5.cpp  sp6.cpp
